adding in first pass at UDP send/recv
also removed dev log

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :dst_ip %><br>
-    <%= f.number_field :dst_ip %>
+    <%= f.text_field :dst_ip %>
   </div>
   <div class="field">
     <%= f.label :dst_port %><br>
